EXTRA_DIST = config_file.h \
	     format.h \
	     fs.h \
	     stream.h \
	     demux.h \
	     file.h \
	     meta.h \
	     decoder.h \
	     output.h \
	     resample.h \
	     cache.h \
	     avahi.h \
	     httpd.h \
	     http.h \
	     shoutcast.h \
	     rtsp.h \
	     rtp.h \
	     sdp.h \
	     timer.h \
	     utils.h \
	     module.h \
	     db.h \
	     json.h

